Setup of full LPA questionnaire v2

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -380,8 +380,69 @@
                 <div class="govuk-inset-text govuk-!-margin-top-0">
 
                   {{ govukTag({
-                    classes: "govuk-tag--green govuk-!-margin-bottom-3",
-                    text: "Ready for UR"
+                    classes: "govuk-tag--red govuk-!-margin-bottom-3",
+                    text: "WIP"
+                  }) }}
+                  <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                    Full planning LPA questionnaire - Version 2
+                  </h3>
+                  <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                      <a href="/lpa-questionnaire/fullv2/email/started-refusal" title="">Start from email - Appeal against the refusal of planning application</a>
+                    </li>
+                    <br>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv2/task-list" title="">Start journey from task list</a>
+                    </li>
+                    <br>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv2/skip/simplest-cya" title="">Start from check your answers (simplest answers)</a>
+                    </li>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv2/skip/complex-cya" title="">Start from check your answers (complex answers)</a>
+                    </li>
+                  </ul>
+                  <!--details class="govuk-details" data-module="govuk-details">
+                    <summary class="govuk-details__summary">
+                      <span class="govuk-details__summary-text">
+                        User research (X)
+                      </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                      <ul class="govuk-list govuk-list-bulleted">
+                        <li><a href="">XXXX</a></li>
+                      </ul>
+                    </div>
+                  </details>
+                  <details class="govuk-details" data-module="govuk-details">
+                    <summary class="govuk-details__summary">
+                      <span class="govuk-details__summary-text">
+                        Jira Tickets (X)
+                      </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                      <ul class="govuk-list govuk-list-bulleted">
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="">AS-XXXX</a></li>
+                      </ul>
+                    </div>
+                  </details-->
+                </div>
+
+                <div class="govuk-inset-text govuk-!-margin-top-0">
+
+                  {{ govukTag({
+                    classes: "govuk-tag--blue govuk-!-margin-bottom-3",
+                    text: "Done"
                   }) }}
                   <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                     Full planning LPA questionnaire - Version 1
@@ -407,9 +468,32 @@
                     <li>
                       <a href="/lpa-questionnaire/fullv1/skip/complex-cya" title="">Start from check your answers (complex answers)</a>
                     </li>
-                    
-                    <!--li><a href="/lpa-questionnaire/fullv1/jump/tasks-complete" class="govuk-link">Jump to Check You Answers</a></li-->
                   </ul>
+                  <details class="govuk-details" data-module="govuk-details">
+                    <summary class="govuk-details__summary">
+                      <span class="govuk-details__summary-text">
+                        User research (14)
+                      </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                      <ul class="govuk-list govuk-list-bulleted">
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514223334423&cot=14">UR - analysis (sprint 4)</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514463382302&cot=14">Task list / tasks</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514465209427&cot=14">Plans etc.</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514470838327&cot=14">File upload</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514471658327&cot=14">Listed buildings</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514476816270&cot=14">Informing interested parties</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514581617833&cot=14">Start email</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514581706244&cot=14">Representations</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514581706630&cot=14">Extra conditions</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514581907367&cot=14">Conservation area</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514582023004&cot=14">Procedure</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514614175105&cot=14">CIL</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514582156490&cot=14">Designated sites</a></li>
+                        <li><a href="https://miro.com/app/board/o9J_lgiOe44=/?moveToWidget=3458764514582450124&cot=14">Consulting HE and NE</a></li>
+                      </ul>
+                    </div>
+                  </details>
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
