AS-4097 Save and return updates for interactions

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -410,32 +410,23 @@
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list-bulleted">
-                        <li><a href="">XXXX</a></li>
+                        <li><a href="" target="_blank">XXXX</a></li>
                       </ul>
                     </div>
-                  </details>
+                  </details-->
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (X)
+                        Jira Tickets (2)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list-bulleted">
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
-                        <li><a href="">AS-XXXX</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4036" target="_blank">AS-4036 Interaction change for type of designated site</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4097" target="_blank">AS-4097 LPA Questionnaire save and return functionality</a></li>
                       </ul>
                     </div>
-                  </details-->
+                  </details>
                 </div>
 
                 <div class="govuk-inset-text govuk-!-margin-top-0">
