--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/schedule.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/schedule.html
@@ -63,7 +63,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="screening-opinion">Skip this question</a>
         </div>
