--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/screening-opinion.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/screening-opinion.html
@@ -55,7 +55,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="environmental-statement">Skip this question</a>
         </div>
