--- a/app/views/lpa-questionnaire/fullv2/interested-parties/publicise-application.html
+++ b/app/views/lpa-questionnaire/fullv2/interested-parties/publicise-application.html
@@ -52,7 +52,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="tell-application">Skip this question</a>
         </div>
