--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/supplementary-list.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/supplementary-list.html
@@ -75,7 +75,7 @@
             classes: "govuk-button--secondary"
           }) }}
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
         </div>
         
