--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/supplementary.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/supplementary.html
@@ -137,7 +137,7 @@
         
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="cil">Skip this question</a>
         </div>
