--- a/app/views/lpa-questionnaire/fullv2/proposed-development/rightofway-details.html
+++ b/app/views/lpa-questionnaire/fullv2/proposed-development/rightofway-details.html
@@ -77,7 +77,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="tpo">Skip this question</a>
         </div>
