--- a/app/views/lpa-questionnaire/fullv2/representations/other.html
+++ b/app/views/lpa-questionnaire/fullv2/representations/other.html
@@ -67,7 +67,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
