--- a/app/views/lpa-questionnaire/fullv2/representations/statutory-consultees.html
+++ b/app/views/lpa-questionnaire/fullv2/representations/statutory-consultees.html
@@ -67,7 +67,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           {% if 'Other parties' in data['lpaq-'+version+'-representations-whichparties'] %}
             <a class="govuk-link" href="other">Skip this question</a>
