--- a/app/views/lpa-questionnaire/fullv2/surrounding-area/conservation-area-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/surrounding-area/conservation-area-upload.html
@@ -68,7 +68,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="aonb">Skip this question</a>
         </div>
