--- a/app/views/lpa-questionnaire/fullv2/surrounding-area/green-belt.html
+++ b/app/views/lpa-questionnaire/fullv2/surrounding-area/green-belt.html
@@ -56,7 +56,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="conservation-area">Skip this question</a>
         </div>
