--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/environmental-statement-details.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/environmental-statement-details.html
@@ -74,7 +74,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="notifications-consultations">Skip this question</a>
         </div>
