--- a/app/views/lpa-questionnaire/fullv2/interested-parties/tell-application.html
+++ b/app/views/lpa-questionnaire/fullv2/interested-parties/tell-application.html
@@ -51,7 +51,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="told-appeal">Skip this question</a>
         </div>
