--- a/app/views/lpa-questionnaire/fullv2/interested-parties/told-appeal-letter.html
+++ b/app/views/lpa-questionnaire/fullv2/interested-parties/told-appeal-letter.html
@@ -72,7 +72,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
