--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/cil-details.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/cil-details.html
@@ -123,7 +123,7 @@
         
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
