--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/statutory-development.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/statutory-development.html
@@ -68,7 +68,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="neighbourhood-plan">Skip this question</a>
         </div>
