--- a/app/views/lpa-questionnaire/fullv2/procedure-type/inquiry-witnesses.html
+++ b/app/views/lpa-questionnaire/fullv2/procedure-type/inquiry-witnesses.html
@@ -43,7 +43,7 @@
         
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
