--- a/app/views/lpa-questionnaire/fullv2/proposed-development/site-plan.html
+++ b/app/views/lpa-questionnaire/fullv2/proposed-development/site-plan.html
@@ -71,7 +71,7 @@
 
         <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="involves-listed-building">Skip this question</a>
         </div>
