--- a/app/views/lpa-questionnaire/fullv2/site-access/health-safety.html
+++ b/app/views/lpa-questionnaire/fullv2/site-access/health-safety.html
@@ -91,7 +91,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
