--- a/app/views/lpa-questionnaire/fullv2/surrounding-area/affects-listed-building-consultation.html
+++ b/app/views/lpa-questionnaire/fullv2/surrounding-area/affects-listed-building-consultation.html
@@ -67,7 +67,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="ancient-monument">Skip this question</a>
         </div>
