--- a/app/views/lpa-questionnaire/fullv2/surrounding-area/sssi.html
+++ b/app/views/lpa-questionnaire/fullv2/surrounding-area/sssi.html
@@ -58,7 +58,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="affects-listed-building">Skip this question</a>
         </div>
