--- a/app/views/lpa-questionnaire/fullv2/your-decision/plans-documents-drawings.html
+++ b/app/views/lpa-questionnaire/fullv2/your-decision/plans-documents-drawings.html
@@ -71,7 +71,7 @@
 
          <div class="govuk-button-group">
           {{ govukButton({
-            text: "Continue"
+            text: "Save and continue"
           }) }}
           <a class="govuk-link" href="extra-conditions">Skip this question</a>
         </div>
