--- a/app/assets/sass/pins/uploads.scss
+++ b/app/assets/sass/pins/uploads.scss
@@ -2,13 +2,38 @@
 	background-color: govuk-colour("light-grey");
 	border: dashed 2px govuk-colour("black");
 	padding: 3em;
-	 &:focus {
-	padding: 3em;
+	&:focus {
+		padding: 3em;
 	}
 }
 
-.pins-file-upload-multiple {
-	border: black 3px dashed;
+.pins-file-upload {
+	border: $govuk-border-colour	2px dashed;
 	margin-left: 3px;
-	padding: 50px;
+	padding: 50px 30px;
+	width: calc(100% - 60px);
+}
+
+.pins-upload-container {
+	position: relative;
+
+	.pins-upload-instruction {
+		position: absolute;
+		top: 20px;
+		left: 32px;
+	}
+
+	.pins-upload-divider {
+		position: absolute;
+		top: 50px;
+		left: 32px;
+	}
+
+	.pins-upload-dragdrop {
+		border: black 3px dashed;
+		margin-left: 3px;
+		padding: 85px 50px 25px 25px;
+		width: calc(100% - 70px);
+	}
+
 }
