--- a/app/views/patterns/upload-single/error.html
+++ b/app/views/patterns/upload-single/error.html
@@ -22,56 +22,57 @@
         titleText: "There is a problem",
         errorList: [
           {
-            text: "Error text",
-            href: "Anchor text"
+            text: "The file must be smaller than 15MB",
+            href: "#file-upload-1-error"
           }
         ]
       }) }}
 
-      <form action="" method="post">
+      <h1 class="govuk-heading-xl">
+        Upload a single file
+      </h1>
+      
+      <div class="govuk-form-group govuk-form-group--error">
+        <label class="govuk-label" for="single-upload">
+          Drag and drop or choose a file
+        </label>
+        <span id="file-upload-1-error" class="govuk-error-message">
+          <span class="govuk-visually-hidden">Error:</span> The file must be smaller than 15MB
+        </span>
+        <input class="govuk-file-upload pins-file-upload" id="single-upload" name="single-upload" type="file">
+      </div>
 
-        <h1 class="govuk-heading-xl">
-          Upload a single file
-        </h1>
-        
-        <div class="govuk-form-group govuk-form-group--error">
-          <label class="govuk-label" for="single-upload">
-            Drag and drop or choose a file
-          </label>
-          <span id="file-upload-1-error" class="govuk-error-message">
-            <span class="govuk-visually-hidden">Error:</span> The file must be smaller than 15MB
-          </span>
-          <input class="govuk-file-upload pins-file-upload" id="single-upload" name="single-upload" type="file">
-        </div>
+      {{ govukDetails({
+        summaryText: "Files you can upload",
+        html: '
+          <p class="govuk-body">
+            You can upload the following types of file:
+          </p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>DOC or DOCX</li>
+            <li>JPG or JPEG</li>
+            <li>PDF</li>
+            <li>PNG</li>
+            <li>TIF or TIFF</li>
+          </ul>
+          <p class="govuk-body">
+            Your file must be smaller than 15MB.
+          </p>
+        '
+      }) }}
 
-        {{ govukDetails({
-          summaryText: "Files you can upload",
-          html: '
-            <p class="govuk-body">
-              You can upload the following types of file:
-            </p>
-            <ul class="govuk-list govuk-list--bullet">
-              <li>DOC or DOCX</li>
-              <li>JPG or JPEG</li>
-              <li>PDF</li>
-              <li>PNG</li>
-              <li>TIF or TIFF</li>
-            </ul>
-            <p class="govuk-body">
-              Your file must be smaller than 15MB.
-            </p>
-          '
-        }) }}
+      {{ govukButton({
+        text: "Continue"
+      }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
-
-      </form>
-
+    </div>
   </div>
-  <div class="govuk-grid-column-one-third">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+      
+      {% include "./_nav.html" %}
+
+    </div>
   </div>
-</div>
 
 {% endblock %}
