Upload multiple files pattern

--- a/app/views/patterns/upload-multiple/delete.html
+++ b/app/views/patterns/upload-multiple/delete.html
@@ -53,13 +53,13 @@
 
       {{ govukButton({
         text: "Delete",
-        href: "upload",
+        href: "uploaded",
         disabled: true,
         classes: "govuk-!-margin-right-5"
       }) }}
 
       {{ govukButton({
-        href: "replace",
+        href: "uploaded",
         text: "Cancel",
         classes: "govuk-button--secondary"
       }) }}
