--- a/app/views/patterns/upload-multiple/upload.html
+++ b/app/views/patterns/upload-multiple/upload.html
@@ -17,68 +17,56 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-    
-      <form action="" method="post">
 
-        <h1 class="govuk-heading-xl">
-          Upload multiple files
-        </h1>
-        
-        <!--div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-proposeddevelopment-siteplan">
-            Upload file
-          </label>
-          <input class="govuk-file-upload pins-upload-multiple" id="lpaq-{{version}}-proposeddevelopment-siteplan" name="lpaq-{{version}}-proposeddevelopment-siteplan" type="file">
-        </div-->
-        
-        <!--div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-proposeddevelopment-siteplan">
-            Upload file
-          </label>
-          <div class="pins-upload-container">
-            <p class="govuk-body pins-upload-instruction">
-              Drag and drop a file
-            </p>
-            <p class="govuk-body pins-upload-divider">or
-            </p>
-            <input class="govuk-file-upload pins-upload-dragdrop" id="lpaq-{{version}}-proposeddevelopment-siteplan" name="lpaq-{{version}}-proposeddevelopment-siteplan" type="file">
-          </div>
-        </div-->
-        
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="upload-multiple">
-            Drag and drop or choose files
-          </label>
-          <input class="govuk-file-upload pins-file-upload" id="upload-multiple" name="upload-multiple" type="file" multiple>
-        </div>
-        {{ govukDetails({
-          summaryText: "Files you can upload",
-          html: '
-            <p class="govuk-body">
-              You can upload the following types of file:
-            </p>
-            <ul class="govuk-list govuk-list--bullet">
-              <li>DOC or DOCX</li>
-              <li>JPG or JPEG</li>
-              <li>PDF</li>
-              <li>PNG</li>
-              <li>TIF or TIFF</li>
-            </ul>
-            <p class="govuk-body">
-              Each file must be smaller than 15MB.
-            </p>
-          '
-        }) }}
+      <h1 class="govuk-heading-xl">
+        Upload multiple files
+      </h1>
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
-
-      </form>
-
-  </div>
-  <div class="govuk-grid-column-one-third">
   </div>
 </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="upload-multiple">
+          Drag and drop or choose files
+        </label>
+        <input class="govuk-file-upload pins-file-upload" id="upload-multiple" name="upload-multiple" type="file" multiple>
+      </div>
+
+      {{ govukDetails({
+        summaryText: "Files you can upload",
+        html: '
+          <p class="govuk-body">
+            You can upload the following types of file:
+          </p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>DOC or DOCX</li>
+            <li>JPG or JPEG</li>
+            <li>PDF</li>
+            <li>PNG</li>
+            <li>TIF or TIFF</li>
+          </ul>
+          <p class="govuk-body">
+            Your file must be smaller than 15MB.
+          </p>
+        '
+      }) }}
+
+      {{ govukButton({
+        href: "uploaded",
+        text: "Continue"
+      }) }}
+
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+      
+      {% include "./_nav.html" %}
+
+    </div>
+  </div>
 
 {% endblock %}
