Updated all file upload patterns and conservation area question

--- a/app/assets/sass/pins/uploads.scss
+++ b/app/assets/sass/pins/uploads.scss
@@ -8,12 +8,12 @@
 }
 
 .pins-file-upload {
-	border: $govuk-border-colour	2px dashed;
+	border: $govuk-border-colour 2px dashed;
 	margin-left: 3px;
 	padding: 50px 30px;
-	width: calc(100% - 60px);
+	width: calc(90% - 60px);
 }
-
+/*
 .pins-upload-container {
 	position: relative;
 
@@ -33,7 +33,7 @@
 		border: black 3px dashed;
 		margin-left: 3px;
 		padding: 85px 50px 25px 25px;
-		width: calc(100% - 70px);
+		width: calc(90% - 75px);
 	}
 
-}
+}*/
