--- a/app/views/lpa-questionnaire/fullv2/surrounding-area/conservation-area.html
+++ b/app/views/lpa-questionnaire/fullv2/surrounding-area/conservation-area.html
@@ -34,7 +34,7 @@
           name: "lpaq-"+version+"-surroundingarea-conservationarea",
           fieldset: {
             legend: {
-              text: "Is the appeal site in or near a conservation area?",
+              text: "Is the appeal site in or next to a conservation area?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--xl"
             }
@@ -46,14 +46,14 @@
               checked: checked("lpaq-"+version+"-surroundingarea-conservationarea", "Yes, it is in a conservation area")
             },
             {
-              value: "Yes, it is near a conservation area",
-              html: "Yes, it is <strong>near</strong> a conservation area",
-              checked: checked("lpaq-"+version+"-surroundingarea-conservationarea", "Yes, it is near a conservation area")
+              value: "Yes, it is next to a conservation area",
+              html: "Yes, it is <strong>next to</strong> a conservation area",
+              checked: checked("lpaq-"+version+"-surroundingarea-conservationarea", "Yes, it is next to a conservation area")
             },
             {
-              value: "No, it is not in or near a conservation area",
-              text: "No, it is not in or near a conservation area",
-              checked: checked("lpaq-"+version+"-surroundingarea-conservationarea", "No, it is not in or near a conservation area")
+              value: "No, it is not in or next to a conservation area",
+              text: "No, it is not in or next to a conservation area",
+              checked: checked("lpaq-"+version+"-surroundingarea-conservationarea", "No, it is not in or next to a conservation area")
             }
           ]
         }) }}
