--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/cil-details.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/cil-details.html
@@ -32,40 +32,32 @@
         <h1 class="govuk-heading-xl">
           Community infrastructure levy details
         </h1>
-        
+      
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-localplanspolicies-cil-details">
-            Upload your community infrastructure levy
+          <label class="govuk-label" for="lpaq-{{version}}-localplanspolicies-cil-details">
+            Drag and drop or choose files
           </label>
-          <p class="govuk-body">
-            Drag and drop a file or select "choose files"
-          <p>
-          <input class="govuk-file-upload pins-file-upload-multiple" id="lpaq-{{version}}-localplanspolicies-cil-details" name="lpaq-{{version}}-localplanspolicies-cil-details" type="file">
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-localplanspolicies-cil-details" name="lpaq-{{version}}-localplanspolicies-cil-details" type="file" multiple>
         </div>
 
-        {{ govukInsetText({
-          text: "File size should be no more than 15MB"
-        }) }}
-
         {{ govukDetails({
-          summaryText: "Help with file formats",
+          summaryText: "Files you can upload",
           html: '
             <p class="govuk-body">
-              Your file must be in one of the following formats:
-            <p>
+              You can upload the following types of file:
+            </p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>pdf</li>
-              <li>doc</li>
-              <li>docx</li>
-              <li>tif</li>
-              <li>tiff</li>
-              <li>jpg</li>
-              <li>jpeg</li>
-              <li>png</li>
+              <li>DOC or DOCX</li>
+              <li>JPG or JPEG</li>
+              <li>PDF</li>
+              <li>PNG</li>
+              <li>TIF or TIFF</li>
             </ul>
+            <p class="govuk-body">
+              Your file must be smaller than 15MB.
+            </p>
           '
-        }) }} 
-
+        }) }}
 
         {% set dateHtml %}
           {{ govukDateInput({
@@ -121,7 +113,7 @@
           ]
         }) }}
         
-         <div class="govuk-button-group">
+        <div class="govuk-button-group">
           {{ govukButton({
             text: "Save and continue"
           }) }}
@@ -130,10 +122,10 @@
 
       </form>
 
+    </div>
+    <div class="govuk-grid-column-one-third">
+      {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
+    </div>
   </div>
-  <div class="govuk-grid-column-one-third">
-    {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
-  </div>
-</div>
 
 {% endblock %}
