--- a/app/views/lpa-questionnaire/fullv2/proposed-development/site-plan.html
+++ b/app/views/lpa-questionnaire/fullv2/proposed-development/site-plan.html
@@ -31,43 +31,33 @@
         <h1 class="govuk-heading-xl">
           Site plan
         </h1>
-
-        <!--p class="govuk-body">
-          Upload a plan that shows the location and boundary of the appeal site. 
-        </p-->
-        
+      
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-proposeddevelopment-siteplan">
-            Upload file
+          <label class="govuk-label" for="lpaq-{{version}}-proposeddevelopment-siteplan">
+            Drag and drop or choose files
           </label>
-          <p class="govuk-body">
-            Drag and drop a file or select "choose files"
-          <p>
-          <input class="govuk-file-upload pins-file-upload-multiple" id="lpaq-{{version}}-proposeddevelopment-siteplan" name="lpaq-{{version}}-proposeddevelopment-siteplan" type="file">
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-proposeddevelopment-siteplan" name="lpaq-{{version}}-proposeddevelopment-siteplan" type="file" multiple>
         </div>
 
-        {{ govukInsetText({
-          text: "File size should be no more than 15MB"
-        }) }}
-
         {{ govukDetails({
-          summaryText: "Help with file formats",
+          summaryText: "Files you can upload",
           html: '
             <p class="govuk-body">
-              Your file must be in one of the following formats:
-            <p>
+              You can upload the following types of file:
+            </p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>pdf</li>
-              <li>doc</li>
-              <li>docx</li>
-              <li>tif</li>
-              <li>tiff</li>
-              <li>jpg</li>
-              <li>jpeg</li>
-              <li>png</li>
+              <li>DOC or DOCX</li>
+              <li>JPG or JPEG</li>
+              <li>PDF</li>
+              <li>PNG</li>
+              <li>TIF or TIFF</li>
             </ul>
+            <p class="govuk-body">
+              Your file must be smaller than 15MB.
+            </p>
           '
-        }) }} 
+        }) }}
+        
 
         <div class="govuk-button-group">
           {{ govukButton({
@@ -78,10 +68,10 @@
 
       </form>
 
+    </div>
+    <div class="govuk-grid-column-one-third">
+      {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
+    </div>
   </div>
-  <div class="govuk-grid-column-one-third">
-    {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
-  </div>
-</div>
 
 {% endblock %}
