--- a/app/views/lpa-questionnaire/fullv2/representations/statutory-consultees.html
+++ b/app/views/lpa-questionnaire/fullv2/representations/statutory-consultees.html
@@ -33,37 +33,30 @@
         </h1>
         
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-representations-statutoryconsultee">
-            Upload files
+          <label class="govuk-label" for="lpaq-{{version}}-representations-statutoryconsultee">
+            Drag and drop or choose files
           </label>
-          <p class="govuk-body">
-            Drag and drop files or select "choose files"
-          <p>
-          <input class="govuk-file-upload pins-file-upload-multiple" id="lpaq-{{version}}-representations-statutoryconsultee" name="lpaq-{{version}}-representations-statutoryconsultee" type="file" multiple>
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-representations-statutoryconsultee" name="lpaq-{{version}}-representations-statutoryconsultee" type="file" multiple>
         </div>
 
-        {{ govukInsetText({
-          text: "File size should be no more than 15MB"
-        }) }}
-
         {{ govukDetails({
-          summaryText: "Help with file formats",
+          summaryText: "Files you can upload",
           html: '
             <p class="govuk-body">
-              Your file must be in one of the following formats:
-            <p>
+              You can upload the following types of file:
+            </p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>pdf</li>
-              <li>doc</li>
-              <li>docx</li>
-              <li>tif</li>
-              <li>tiff</li>
-              <li>jpg</li>
-              <li>jpeg</li>
-              <li>png</li>
+              <li>DOC or DOCX</li>
+              <li>JPG or JPEG</li>
+              <li>PDF</li>
+              <li>PNG</li>
+              <li>TIF or TIFF</li>
             </ul>
+            <p class="govuk-body">
+              Your file must be smaller than 15MB.
+            </p>
           '
-        }) }} 
+        }) }}
 
          <div class="govuk-button-group">
           {{ govukButton({
