--- a/app/views/lpa-questionnaire/fullv2/surrounding-area/protected-species-consultation.html
+++ b/app/views/lpa-questionnaire/fullv2/surrounding-area/protected-species-consultation.html
@@ -34,48 +34,41 @@
         <p class="govuk-body">
           Upload the extracts you considered from the protected species standing advice, or Natural England's comments.
         </p>
-        
+      
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-surroundingarea-protectedspecies-consultation">
-            Upload files
+          <label class="govuk-label" for="lpaq-{{version}}-surroundingarea-protectedspecies-consultation">
+            Drag and drop or choose files
           </label>
-          <p class="govuk-body">
-            Drag and drop files or select "choose files"
-          <p>
-          <input class="govuk-file-upload pins-file-upload-multiple" id="lpaq-{{version}}-surroundingarea-protectedspecies-consultation" name="lpaq-{{version}}-surroundingarea-protectedspecies-consultation" type="file" multiple>
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-surroundingarea-protectedspecies-consultation" name="lpaq-{{version}}-surroundingarea-protectedspecies-consultation" type="file" multiple>
         </div>
-
-        {{ govukInsetText({
-          text: "File size should be no more than 15MB"
-        }) }}
 
         {{ govukDetails({
-          summaryText: "Help with file formats",
+          summaryText: "Files you can upload",
           html: '
             <p class="govuk-body">
-              Your file must be in one of the following formats:
-            <p>
+              You can upload the following types of file:
+            </p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>pdf</li>
-              <li>doc</li>
-              <li>docx</li>
-              <li>tif</li>
-              <li>tiff</li>
-              <li>jpg</li>
-              <li>jpeg</li>
-              <li>png</li>
+              <li>DOC or DOCX</li>
+              <li>JPG or JPEG</li>
+              <li>PDF</li>
+              <li>PNG</li>
+              <li>TIF or TIFF</li>
             </ul>
+            <p class="govuk-body">
+              Your file must be smaller than 15MB.
+            </p>
           '
-        }) }} 
+        }) }}
 
-         <div class="govuk-button-group">
-          {{ govukButton({
-            text: "Save and continue"
-          }) }}
-          <a class="govuk-link" href="../task-list">Skip this question</a>
-        </div>
+        <div class="govuk-button-group">
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+        <a class="govuk-link" href="../task-list">Skip this question</a>
+      </div>
 
-      </form>
+    </form>
 
   </div>
   <div class="govuk-grid-column-one-third">
